--- a/bb-backend/package.json
+++ b/bb-backend/package.json
@@ -28,6 +28,7 @@
     "@nestjs/serve-static": "^4.0.0",
     "@prisma/client": "^5.4.1",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.1.13",
