--- a/bb-frontend/package.json
+++ b/bb-frontend/package.json
@@ -10,6 +10,7 @@
   },
   "private": true,
   "dependencies": {
+    "@abacritt/angularx-social-login": "^2.1.0",
     "@angular/animations": "^16.2.0",
     "@angular/cdk": "^16.2.7",
     "@angular/common": "^16.2.0",
@@ -21,6 +22,7 @@
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
     "@stripe/stripe-js": "^2.2.0",
+    "@types/google-one-tap": "^1.2.6",
     "chart.js": "^4.4.0",
     "date-fns": "^2.30.0",
     "rxjs": "~7.8.0",
@@ -32,6 +34,7 @@
     "@angular/cli": "~16.2.1",
     "@angular/compiler-cli": "^16.2.0",
     "@types/jasmine": "~4.3.0",
+    "cypress": "^13.6.1",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
